src/objects/LG_QOS_Template__c.object
<CustomObject>
    <description>This object has the QOS template fields which are used in products for mapping the fields like bandwidth etc...</description>
    <fields>
        <fullName>Low_Loss_Traffic_MB_Sec__c</fullName>
        <label>Low Loss Traffic MB/Sec</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Definition_Name__c</fullName>
        <label>Product Definition Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDS Standort</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qos_Type__c</fullName>
        <label>Qos Type</label>
        <length>49</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Downstream_Bandwidth_MB_Sec__c</fullName>
        <label>Total Downstream Bandwidth MB/Sec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Upstream_Bandwidth_MB_Sec__c</fullName>
        <label>Total Upstream Bandwidth MB/Sec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voice_Traffic__c</fullName>
        <label>Voice Traffic MB/Sec</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>LG_QOS_Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Definition_Name__c</columns>
        <columns>Total_Downstream_Bandwidth_MB_Sec__c</columns>
        <columns>Total_Upstream_Bandwidth_MB_Sec__c</columns>
        <columns>Voice_Traffic__c</columns>
        <columns>Low_Loss_Traffic_MB_Sec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QOS-{0000}</displayFormat>
        <label>LG_QOS_Template Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QosTemplates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>